--- a/Page/scss/_variables.scss
+++ b/Page/scss/_variables.scss
@@ -72,3 +72,14 @@ $btn-padding-y:  2px;
 
 $color-bg-person:#eff4f4;
 $color-person:#505261;
+
+$--card-padding: 5px;
+
+
+/* 改变主题色变量 */
+$--color-primary: teal;
+
+/* 改变 icon 字体路径变量，必需 */
+$--font-path: '~element-ui/lib/theme-chalk/fonts';
+
+@import "~element-ui/packages/theme-chalk/src/index";
