--- a/Page/scss/smartScheduling.scss
+++ b/Page/scss/smartScheduling.scss
@@ -1,6 +1,9 @@
-@import "common.scss";
 @import "variables";
+@import "../../node_modules/element-ui/lib/theme-chalk/index.css";
+@import "common.scss";
+
 @import "pages/nav";
 @import "pages/home";
 @import "pages/sheet";
+@import "pages/violation";
 
