--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -55,20 +55,34 @@
         }
 
     }
-    .el-form,.el-input {
-        .el-form-item,.el-form-item__content {
+    .topbar {
+        .el-form,.el-input {
+            .el-form-item,.el-form-item__content {
+                display: inline-block;
+                .el-select {
+                    width: 96px;
+                }
+            }
+            .el-input__inner {
+                width: 120px;
+            }
+            .el-date-editor {
+                width: 100px;
+            }
             display: inline-block;
-            .el-select {
-                width: 96px;
+            width: 160px;
+        }
+    }
+    .dialog {
+        .el-dialog__header {
+            background-color: #eff5fd;
+            .el-dialog__title {
+                color: #00a3db;
+                font-size: 14px;
             }
         }
         .el-input__inner {
-            width: 120px;
+            width: 160px;
         }
-        .el-date-editor {
-            width: 100px;
-        }
-        display: inline-block;
-        width: 120px;
     }
 }
