--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -1,6 +1,7 @@
 .violation {
     width: 100%;
     padding: 5px;
+    font-size:14px;
     .tab-button {
         margin-bottom: 10px;
     }
@@ -56,6 +57,8 @@
 
     }
     .topbar {
+        text-align: right;
+        margin-right: 10px;
         .el-form,.el-input {
             .el-form-item,.el-form-item__content {
                 display: inline-block;
@@ -64,7 +67,9 @@
                 }
             }
             .el-input__inner {
-                width: 120px;
+                width: 160px;
+                height: 30px;
+                line-height: 30px;
             }
             .el-date-editor {
                 width: 100px;
@@ -81,8 +86,34 @@
                 font-size: 14px;
             }
         }
-        .el-input__inner {
-            width: 160px;
+        .el-dialog__body {
+            padding-top: 15px;
+            .el-form-item {
+                margin-bottom: 10px;
+            }
+            .el-input__inner {
+                width: 160px;
+            }
+        }
+        .company-list {
+            border: 1px dashed #333;
+            background-color: #eff5fd;
+            padding: 10px;
+            color: #333;
+            .company-info {
+                display: inline-block;
+                background-color: #00b3e6;
+                color: #fff;
+                font-size: 12px;
+                p {
+                    margin: 2px;
+                }
+            }
+            .name {
+                display: inline-block;
+                padding: 2px 4px;
+                font-size: 12px;
+            }
         }
     }
 }
