页面刷新之后路由失效的修正，获取违规记录显示数据成功，尚未通过vuex展示

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -77,6 +77,10 @@
             display: inline-block;
             width: 160px;
         }
+        .el-input__icon{
+            height: 30px;
+            line-height: 30px;
+        } 
     }
     .dialog {
         .el-dialog__header {
