--- a/Page/scss/common.scss
+++ b/Page/scss/common.scss
@@ -25,3 +25,8 @@ div{
         }
     }
 }
+.el-select-dropdown__item.hover, .el-select-dropdown__item:hover{
+	background-color:#0090ff !important;
+	color:white;
+}
+
