偏离上报静态页面

--- a/Page/scss/pages/_urgentReport.scss
+++ b/Page/scss/pages/_urgentReport.scss
@@ -26,7 +26,7 @@
 		display:flex;
 		flex-direction:row;
 	}
-	.el-icon-caret-right::before{
+	.el-icon-caret-right{
 		line-height:20px;
 		height:20px;
 	}
@@ -37,4 +37,3 @@
 		height:auto;
 	}
 }
-
