--- a/Page/scss/pages/_urgentReport.scss
+++ b/Page/scss/pages/_urgentReport.scss
@@ -21,19 +21,22 @@
 	.Row3{
 		display:flex;
 		flex-direction:row;
+		height:25px;
 	}
 	.Row4{
 		display:flex;
 		flex-direction:row;
+		height:25px;
+		align-items:baseline;
 	}
 	.el-icon-caret-right{
-		line-height:20px;
-		height:20px;
+		line-height:25px;
+		height:25px;
+	}
+	.Name{
+		line-height:25px;
 	}
 	.el-col{
 		margin:5px 2.5px;
-	}
-	#app{
-		height:auto;
 	}
 }
