--- a/Page/scss/components/_UrgentReportBtn.scss
+++ b/Page/scss/components/_UrgentReportBtn.scss
@@ -21,14 +21,15 @@
 	.Row3{
 		display:flex;
 		flex-direction:row;
+		height:23px;
 	}
 	.Row4{
 		display:flex;
 		flex-direction:row;
 	}
-	.el-icon-caret-right::before{
-		line-height:20px;
-		height:20px;
+	.el-icon-caret-right{
+		line-height:23px;
+		height:23px;
 	}
 	.el-col{
 		margin:5px 2.5px;
