--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -47,6 +47,9 @@
         }
         .status {
             text-align: center;
+            button {
+                cursor: pointer;
+            }
         }
         .status0 {
             text-align: center;
