分页页面的添加

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -146,5 +146,11 @@
             padding: 2px;
             text-align: center;
         }
-    }  
+    }
+    .page-nation {
+        text-align: center;
+        .el-pagination {
+            display: inline-block;
+        }
+    } 
 }
