--- a/Page/scss/smartScheduling.scss
+++ b/Page/scss/smartScheduling.scss
@@ -1,6 +1,7 @@
-@import "variables";
 @import "../../node_modules/element-ui/lib/theme-chalk/index.css";
+@import "variables";
 @import "common.scss";
+@import "../../public/iconfont/iconfont.css";
 
 @import "pages/nav";
 @import "pages/home";
