--- a/Page/scss/_variables.scss
+++ b/Page/scss/_variables.scss
@@ -81,5 +81,7 @@ $--card-padding: 5px;
 
 /* 改变 icon 字体路径变量，必需 */
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
+// $--font-path: '../../public/iconfont';
+
 
 @import "~element-ui/packages/theme-chalk/src/index";
