违规记录页面搜索和状态修改的事件添加

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -148,9 +148,13 @@
         }
     }
     .page-nation {
+        display: none;
         text-align: center;
         .el-pagination {
             display: inline-block;
         }
+        position: fixed;
+        bottom: 30px;
+        margin-left: 27%;
     } 
 }
