--- a/Page/scss/pages/_urgentReport.scss
+++ b/Page/scss/pages/_urgentReport.scss
@@ -2,41 +2,38 @@
 	flex:1;
 	padding:10px 25px;
 	background-color:#e4e4e4;
+	overflow:scroll;
 	.Row1{
 		display:flex;
 		flex-direction:row;
-		justify-content:space-between;
+		align-items:baseline;
 		position:relative;
-	}
+	}   
 	.No{
-		position:absolute;
-		left:20px;
+		padding-left:5px;
 	}
-	.Ud1{
-		width:50px;
-		background-color:#00B8FF;
-		color:white;
+	.Dname{
+		position:absolute;
+		right:0px;
+		background-color:#50b7f7;
 		text-align:center;
+		white-space:nowrap;
+	}
+	.Row2{
 	}
 	.Row3{
 		display:flex;
 		flex-direction:row;
-		height:25px;
+		align-items:baseline;
 	}
 	.Row4{
 		display:flex;
 		flex-direction:row;
-		height:25px;
 		align-items:baseline;
 	}
-	.el-icon-caret-right{
-		line-height:25px;
-		height:25px;
-	}
-	.Name{
-		line-height:25px;
-	}
 	.el-col{
-		margin:5px 2.5px;
+		margin-top:2.5px;
+		margin-bottom:2.5px;
 	}
 }
+
