--- a/Page/scss/components/_elDialog.scss
+++ b/Page/scss/components/_elDialog.scss
@@ -1,22 +1,24 @@
 .el-dialog__wrapper{
 	.el-dialog{
 		border-radius:6px;
+		overflow:hidden;
 		.el-dialog__header{
-			background-color:#eaf5ff;
-			border-radius:6px;
+			background-color:#2E67F6;
 			padding:10px 15px 5px 15px;
 			.el-dialog__title{
-				color:#43aeff;
+				color:#fff;
 			}
 			.el-dialog__headerbtn{
-				background-color:#eaf5ff;
+				background-color:#2E67F6;
 				border-radius:20px;
-				height:20px;
-				width:20px;
-				color:#009fff;
-				border:1px solid #76afe2;
-				top:-8px;
-				right:-8px;
+				height:25px;
+				width:25px;
+				border:1px solid #fff;
+				top:7px;
+				right:7px;
+				.el-dialog__close{
+					color:#fff;
+				}
 			}
 		}
 		.el-dialog__body{
