--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -13,7 +13,7 @@
     .violation-card {
         .violation-id {
             font-size: 18px;
-            .tag {
+            .tag{
                 display: inline-block;
                 color: #fff;
                 font-size: 14px;
@@ -22,6 +22,18 @@
                 padding:2px 10px;
                 float: right;
                 margin-right: 10px;
+            }
+            .tag-user {
+                background-color: #77ca35;
+            }
+            .tag-device {
+                background-color: #00a301;
+            }
+            .tag-car {
+                background: #31509d;
+            }
+            .tag-company {
+                background: #588fe5;
             }
         }
         .company {
@@ -39,10 +51,11 @@
             padding-bottom: 10px;
             .picture {
                 height: 50px;
-                width: 90px;
+                width: 70px;
                 border: 1px solid #ccc;
                 background-color: #ccc;
-                padding: 20px;
+                margin-right: 5px;
+                // padding: 20px;
             }
         }
         .status {
