--- a/Page/scss/pages/_rollCall.scss
+++ b/Page/scss/pages/_rollCall.scss
@@ -56,7 +56,7 @@
 			 }
 		 }
 		 .el-tabs__content{
-			 .el-button{
+			 			 .el-button{
 				 margin-left:10px;
 				 margin-right:0;
 				 margin-bottom:10px;
@@ -67,6 +67,33 @@
 				 i{
 					 color:#009eff;
 				 }
+				 &.leave{
+					 background-color:#DFE1E9;
+					 color:#3A3F43;
+					 i {
+						color:#fff;
+					 }
+					 .tip{
+						 padding:0;
+						 margin:0;
+						 margin:0 4px;
+						 font-size:12px;
+						 background-color:#393f43;
+						 color:#fff;
+					 }
+				 }
+				 &.instead{
+					 .tip{
+						 padding:0;
+						 margin:0;
+						 margin:0 4px;
+						 font-size:12px;
+						 background-color:#ff5b00;
+						 color:#fff;
+					 }
+
+				 }
+
 				 &.active,&:hover{
 					 background-color:#0064FF;
 					 color:#fff;
