修改重置和临时任务的图标

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -116,7 +116,12 @@ body > .el-container {
         text-align: right;
         justify-content: flex-end;
         background-color: #f1f1f1;
-      }
+			}
+			.icon-search {
+				&:before {
+					content: "\e663"
+				}
+			}
     }
     .el-main{
       display: flex;
