table tag添加，图片详情弹窗添加

--- a/Page/scss/_variables.scss
+++ b/Page/scss/_variables.scss
@@ -74,6 +74,7 @@ $color-bg-person:#eff4f4;
 $color-person:#505261;
 
 $--card-padding: 5px;
+$--table-current-row-background: #e3f3fc;
 
 
 /* 改变主题色变量 */
