--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -72,6 +72,16 @@
         }
 
     }
+    .tab-btn {
+        height: 20px;
+        line-height: 20px;
+        padding: 0 10px;
+        border-radius: 10px;
+        margin-top: 12px;
+        :focus {
+            outline: 0;
+        }
+    }
     .topbar {
         text-align: right;
         margin-right: 10px;
@@ -158,7 +168,54 @@
             line-height: 28px;
             padding: 2px;
             text-align: center;
+            border: 1px solid transparent;
+            :hover {
+                border: 1px solid #0096ff !important;
+                background: #e3f3fc !important;
+            }
         }
+        .el-tag--vl-people {
+            width:48px;
+            // height:20px;
+            color: #fff;
+            background-color:#ff8500; 
+        }
+        .el-tag--vl-car {
+            width:48px;
+            // height:20px;
+            color: #fff;
+            background-color:#0096ff; 
+        }
+        .el-tag--vl-company {
+            width:48px;
+            // height:20px;
+            color: #fff;
+            background-color:#a346bc; 
+        }
+        .el-tag--vl-tool {
+            width:48px;
+            // height:20px;
+            color: #fff;
+            background-color:#677f95; 
+        }
+        td {
+            padding: 6px 0 !important;
+            text-align: center;
+            :hover {
+                border-top: 1px solid #0096ff !important;
+                border-bottom: 1px solid #0096ff !important;
+                background: #e3f3fc !important;
+            }
+            // border: 1px solid transparent;
+        }
+        // tr {
+        //     border: 1px solid transparent !important;
+        // }
+        // .el-table__body tr>td:hover{
+        //     // background-color: $--table-row-hover-background;
+        //     background: #e3f3fc;
+        //     border: 1px solid #184bff !important;
+        //   }
     }
     .page-nation {
         display: none;
