图片详情图片展示弹窗组件完善修改，通过vuex控制显示与否

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -57,6 +57,9 @@
                 margin-right: 5px;
                 // padding: 20px;
             }
+            .el-dialog__header {
+                display: none;
+            }
         }
         .status {
             text-align: center;
