--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -2,6 +2,8 @@
     width: 100%;
     padding: 5px;
     font-size:14px;
+    height: 100vh;
+    background: #E4E7EC;
     .tab-button {
         margin-bottom: 10px;
     }
@@ -37,25 +39,32 @@
             }
         }
         .company {
-            color: #333;
-            font-size: 16px;
+            color: #777;
+            font-size: 14px;
         }
         .time {
-            color: #ccc;
+            color: #999;
             font-size: 14px;
         }
         .decribe {
-            border-bottom: 1px dashed #666;
-            margin: 10px 2px;
+            // border-bottom: 1px dashed #666;
+            margin: 10px 0;
             margin-top: 0;
-            padding-bottom: 10px;
+            padding:5px 0px;
+            .decribe-word {
+                margin-bottom: 5px;
+            }
+            .decribe-img {
+                display: flex;
+                justify-content: space-between;
+
+            }
             .picture {
-                height: 50px;
-                width: 70px;
+                height: 70px;
+                width: 80px;
                 border: 1px solid #ccc;
                 background-color: #ccc;
-                margin-right: 5px;
-                // padding: 20px;
+                border-radius: 4px;
             }
             .el-dialog__header {
                 display: none;
@@ -75,19 +84,32 @@
         }
 
     }
+    button:focus {
+        outline: #fff auto 0 !important;
+    }
     .tab-btn {
-        height: 20px;
-        line-height: 20px;
-        padding: 0 10px;
+        height: 24px;
+        line-height: 24px;
+        padding: 0 20px;
         border-radius: 10px;
-        margin-top: 12px;
-        :focus {
-            outline: 0;
-        }
+        // margin-top: 12px;
+        margin-right: 10px;  
+    }
+    .active-tab {
+        background-color: #0096ff;
+        color: #fff;
     }
     .topbar {
         text-align: right;
         margin-right: 10px;
+        .el-input__inner {
+            width: 22rem;
+            height: 30px;
+            line-height: 30px;
+        }
+        .el-date-editor .el-range-separator {
+            line-height: 24px;
+        }
         .el-form,.el-input {
             .el-form-item,.el-form-item__content {
                 display: inline-block;
@@ -101,7 +123,7 @@
                 line-height: 30px;
             }
             .el-date-editor {
-                width: 100px;
+                width: 240px;
             }
             display: inline-block;
             width: 160px;
