--- a/Page/scss/_variables.scss
+++ b/Page/scss/_variables.scss
@@ -76,6 +76,9 @@ $color-person:#505261;
 $--card-padding: 5px;
 
 
+$color-bg-blue:	#1d60dd;
+$color-bg-cyan:	#d5f0ff;
+
 /* 改变主题色变量 */
 // $--color-primary: teal;
 
