图片弹窗的父子传值

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -145,6 +145,7 @@
     .dialog {
         .el-dialog__header {
             background-color: #eff5fd;
+            display: none;
             .el-dialog__title {
                 color: #00a3db;
                 font-size: 14px;
