点到及首页优化

--- a/Page/scss/pages/_home.scss
+++ b/Page/scss/pages/_home.scss
@@ -136,6 +136,12 @@ body > .el-container {
 				margin-bottom:20px;
 			}
 			.taskPersonList{
+			  .taskDetailList{
+				  text-align:left;
+				  span{
+					font-weight:bold;
+				  }
+			  }
 				.el-col{
 					text-align:left;
 					.taskPersonBtn{
