--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -2,6 +2,8 @@
     width: 100%;
     padding: 5px;
     font-size:14px;
+    height: 100vh;
+    background: #E4E7EC;
     .tab-button {
         margin-bottom: 10px;
     }
@@ -11,9 +13,12 @@
         margin-bottom: 10px;
     }
     .violation-card {
+        .el-card {
+            height: 239px;
+        }
         .violation-id {
             font-size: 18px;
-            .tag {
+            .tag{
                 display: inline-block;
                 color: #fff;
                 font-size: 14px;
@@ -23,26 +28,52 @@
                 float: right;
                 margin-right: 10px;
             }
+            .tag-user {
+                background-color: #77ca35;
+            }
+            .tag-device {
+                background-color: #00a301;
+            }
+            .tag-car {
+                background: #31509d;
+            }
+            .tag-company {
+                background: #588fe5;
+            }
         }
         .company {
-            color: #333;
-            font-size: 16px;
+            color: #777;
+            font-size: 14px;
         }
         .time {
-            color: #ccc;
+            color: #999;
             font-size: 14px;
         }
         .decribe {
-            border-bottom: 1px dashed #666;
-            margin: 10px 2px;
+            // border-bottom: 1px dashed #666;
+            margin: 10px 0;
             margin-top: 0;
-            padding-bottom: 10px;
+            padding:5px 0px;
+            .decribe-word {
+                margin-bottom: 5px;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
+            .decribe-img {
+                display: flex;
+                justify-content: space-between;
+
+            }
             .picture {
-                height: 50px;
-                width: 90px;
+                height: 70px;
+                width: 80px;
                 border: 1px solid #ccc;
                 background-color: #ccc;
-                padding: 20px;
+                border-radius: 4px;
+            }
+            .el-dialog__header {
+                display: none;
             }
         }
         .status {
@@ -59,9 +90,35 @@
         }
 
     }
+    button:focus {
+        outline: #fff auto 0 !important;
+    }
+    .tab-btn {
+        height: 24px;
+        line-height: 24px;
+        padding: 0 20px;
+        border-radius: 10px;
+        // margin-top: 12px;
+        margin-right: 10px;  
+    }
+    .active-tab {
+        background-color: #0096ff;
+        color: #fff;
+    }
+    .tooltip {
+        margin: 8px 0;
+    }
     .topbar {
         text-align: right;
         margin-right: 10px;
+        .el-input__inner {
+            width: 22rem;
+            height: 30px;
+            line-height: 30px;
+        }
+        .el-date-editor .el-range-separator {
+            line-height: 24px;
+        }
         .el-form,.el-input {
             .el-form-item,.el-form-item__content {
                 display: inline-block;
@@ -75,7 +132,7 @@
                 line-height: 30px;
             }
             .el-date-editor {
-                width: 100px;
+                width: 240px;
             }
             display: inline-block;
             width: 160px;
@@ -88,6 +145,7 @@
     .dialog {
         .el-dialog__header {
             background-color: #eff5fd;
+            display: none;
             .el-dialog__title {
                 color: #00a3db;
                 font-size: 14px;
@@ -140,11 +198,89 @@
             padding: 2px;
             text-align: center;
         } 
-        .el-table__row {
+        tr {
             height: 28px;
             line-height: 28px;
             padding: 2px;
             text-align: center;
+            border: 1px solid transparent;
+            // :hover {
+            //     border: 1px solid #0096ff !important;
+            //     background: #e3f3fc !important;
+            // }
+        }
+        // &>table {
+        //     tbody {
+        //         .el-table__row {
+        //             height: 28px;
+        //             line-height: 28px;
+        //             padding: 2px;
+        //             text-align: center;
+        //             border: 1px solid transparent;
+        //             :hover {
+        //                 border: 1px solid #0096ff !important;
+        //                 background: #e3f3fc !important;
+        //             }
+        //         } 
+        //     }
+        // }
+        .el-tag--vl-people {
+            width:48px;
+            // height:20px;
+            color: #fff;
+            background-color:#ff8500; 
+        }
+        .el-tag--vl-car {
+            width:48px;
+            // height:20px;
+            color: #fff;
+            background-color:#0096ff; 
+        }
+        .el-tag--vl-company {
+            width:48px;
+            // height:20px;
+            color: #fff;
+            background-color:#a346bc; 
+        }
+        .el-tag--vl-tool {
+            width:48px;
+            // height:20px;
+            color: #fff;
+            background-color:#677f95; 
+        }
+        // td {
+        //     padding: 6px 0 !important;
+        //     text-align: center;
+        //     :hover {
+        //         border-top: 1px solid #0096ff !important;
+        //         border-bottom: 1px solid #0096ff !important;
+        //         background: #e3f3fc !important;
+        //     }
+        //     // border: 1px solid transparent;
+        // }
+        // tr {
+        //     border: 1px solid transparent !important;
+        // }
+        // .el-table__body tr>td:hover{
+        //     // background-color: $--table-row-hover-background;
+        //     background: #e3f3fc;
+        //     border: 1px solid #184bff !important;
+        //   }
+        .el-table--enable-row-hover .el-table__body tr>td {
+            padding: 6px 0;
+            border-top: 1px solid transparent;
+            border-bottom: 1px solid transparent;
+            text-align: center;
+        }
+        .el-table--enable-row-hover .el-table__body tr:hover>td {
+            background-color: #e3f3fc !important;
+            border-top: 1px solid #0096ff;
+            border-bottom: 1px solid #0096ff;
+        }
+        .el-table .cell {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
         }
     }
     .page-nation {
