--- a/Page/scss/smartScheduling.scss
+++ b/Page/scss/smartScheduling.scss
@@ -7,5 +7,8 @@
 @import "pages/home";
 @import "pages/sheet";
 @import "pages/violation";
+@import "pages/statistics";
+
 @import "pages/rollCall";
 @import "pages/urgentReport";
+@import "pages/login";
