--- a/Page/scss/pages/_rollCall.scss
+++ b/Page/scss/pages/_rollCall.scss
@@ -1,6 +1,198 @@
 @import "../components/personSelect";
  .rollCall{
-	.dialogPersonDetail {
+	 flex:1;
+	 padding:10px;
+	 background-color:#e2e7eb;
+	 .header{
+		 height:40px;
+		 .el-col{
+			 height:40px;
+			 color:#333333;	
+			 font-size:14px;
+			 font-weight:bold;
+			 .stick {
+				 position:relative;
+				 display:inline-block;
+				 width:3px;
+				 height:12px;
+				 line-height:40px;
+				 background: #0566FF;
+				 box-shadow: 0 0 4px 0 #B9CDFD;
+				 border-radius: 1px;
+				 margin-right:6px;
+			 }
+		 }
+		 .option{
+			text-align:right;
+		 }
+	 }
+	 .content{
+		 position:relative;
+		 background-color:#fff;
+		 border-radius: 4px;
+		 padding:20px 10px;
+		 .el-tabs__item{
+			 padding:5px !important;
+			 .el-button{
+				 background-color:#E6E6E6;
+				 color:#666;
+				 padding:4px;
+				 i {
+					 font-size:20px;
+					 color:#fff;
+				 }	
+			 }
+		 }
+		 .el-tabs__nav, .el-tabs__item,.el-tabs__header,.el-tabs__nav-wrap{
+			 border:none;
+		 }
+		 .is-active {
+			 .el-button{
+				 background-color:#0566FF; 
+				 color:#fff;
+				 i {
+					 font-size:20px;
+				 }	
+			 }
+		 }
+		 .el-tabs__content{
+			 .el-button{
+				 margin-left:10px;
+				 margin-right:0;
+				 margin-bottom:10px;
+				 background: #DBE9FE;
+				 border: 1px solid #7FB1FF;
+				 border-radius: 3px;
+				 color:#1F407B;
+				 i{
+					 color:#009eff;
+				 }
+				 &.leave{
+					 background-color:#DFE1E9;
+					 color:#3A3F43;
+					 i {
+						 color:#fff;
+					 }
+					 .tip{
+						 padding:0;
+						 margin:0;
+						 margin:0 4px;
+						 font-size:12px;
+						 background-color:#393f43;
+						 color:#fff;
+					 }
+				 }
+				 &.instead{
+					 .tip{
+						 padding:0;
+						 margin:0;
+						 margin:0 4px;
+						 font-size:12px;
+						 background-color:#ff5b00;
+						 color:#fff;
+					 }
+
+				 }
+
+				 &.active,&:hover{
+					 background-color:#0064FF;
+					 color:#fff;
+				 }
+
+			 }
+		 }
+		 .moduleList{
+			.remark{
+				position:absolute;
+				right:10px;
+				top:19px;
+			}
+			.module-head{
+				height:30px;	
+				line-height:30px;
+			}
+			.module-content{
+				height:60px;
+				line-height:60px;
+				overflow:hidden;
+				.workerRow{
+					border-right:1px solid #fff;
+				}
+				.workContent{
+					border-left:1px solid #fff; 
+					border-top: 1px solid #fff;
+					font-size:12px;
+					text-align:center;
+					&.p-blue {
+						background-color:#7bb5ff;
+					}
+					&.p-green{
+						background-color:#61da8c;
+					}
+					&.p-grey {
+						background-color:#dfe1ea;
+					}
+				}
+			}
+			.addPerson{
+				cursor:pointer;	
+			}
+			.ruler {
+				color:#fff;
+				border-left:1px solid #fff;
+				border-right:1px solid #fff;
+				.el-col{
+					font-size:12px;
+					position:relative;
+					color:#393f43;
+					background-color:#393f43;
+					position:relative;
+					&>label{
+						position:absolute;
+						color:#fff;
+						height:30px;
+						top:0;
+						left:-15px;
+					}
+					&:first-child>label{
+						left:2px;
+					}
+
+					&:not(:first-child)::before{
+						content:' ';
+						width:1px;
+						height:8px;
+						position:absolute;
+						bottom:0;
+						left:0;
+						background-color:#fff;
+					}
+					&:last-child::after{
+						content:'09';
+						width:'10px';
+						height:30px;
+						line-height:'30px';
+						position:absolute;
+						color:#fff;
+						top:0;
+						right:2px;
+					}
+				}
+			}
+			.blue {
+				background-color:$color-bg-blue;
+				color:#fff;
+			}
+			.cyan {
+				background-color:$color-bg-cyan;
+				color:#333;
+			}
+			.center {
+				text-align:center;
+			}
+		 }
+	 }
+	 .dialogPersonDetail {
 		.el-dialog__body{
 			padding :25px 10px;
 		}
